add words and definition

--- a/index.html
+++ b/index.html
@@ -8,49 +8,100 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
+    <div>
+      <h4 id="js">JavaScript (JS)</h4>
+      <p id="def1">the programming language of HTML and the Web.</p>
+    </div>
 
-    <ul>
-      <li>JavaScript (JS)</li>
-        <p>Larem Ipsum</p>
-      <li>Operators</li>
-        <p>Larem Ipsum</p>
-      <li>Variables</li>
-        <p>Larem Ipsum</p>
-      <li>Variable naming conventions</li>
-        <p>Larem Ipsum</p>
-      <li>Functions</li>
-        <p>Larem Ipsum</p>
-      <li>Methods</li>
-        <p>Larem Ipsum</p>
-      <li>Arguments</li>
-        <p>Larem Ipsum</p>
-      <li>Parameters</li>
-        <p>Larem Ipsum</p>
-      <li>Return</li>
-        <p>Larem Ipsum</p>
-      <li>Chaining methods</li>
-        <p>Larem Ipsum</p>
-      <li>Strings</li>
-        <p>Larem Ipsum</p>
-      <li>Booleans</li>
-        <p>Larem Ipsum</p>
-      <li>Undefined</li>
-        <p>Larem Ipsum</p>
-      <li>NaN</li>
-        <p>Larem Ipsum</p>
-      <li>Escape</li>
-        <p>Larem Ipsum</p>
-      <li>Alert</li>
-        <p>Larem Ipsum</p>
-      <li>Comments</li>
-        <p>Larem Ipsum</p>
-      <li>jQuery</li>
-        <p>Larem Ipsum</p>
-      <li>Attributes</li>
-        <p>Larem Ipsum</p>
-    <ul>
+    <div>
+      <h4 id="operators">Operators</h4>
+      <p id="def2">JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
+    </div>
 
+    <div>
+      <h4 id="variables">Variables</h4>
+      <p id="def3">JavaScript variables are containers for storing data values.</p>
+    </div>
 
+    <div>
+      <h4 id="vnc">Variable naming conventions</h4>
+      <p id="def4">Coding conventions are style guidelines for programming. </p>
+    </div>
+
+    <div>
+      <h4 id="functions">Functions</h4>
+      <p id="def5">A JavaScript function is a block of code designed to perform a particular task.</p>
+    </div>
+
+    <div>
+      <h4 id="methods">Methods</h4>
+      <p id="def6">JavaScript methods are actions that can be performed on objects. </p>
+    </div>
+
+    <div>
+      <h4 id="arguments">Arguments</h4>
+      <p id="def7">Function arguments are the real values passed to (and received by) the function.</p>
+    </div>
+
+    <div>
+      <h4 id="parameters">Parameters</h4>
+      <p id="def8">Function parameters are the names listed in the function definition.</p>
+    </div>
+
+    <div>
+      <h4 id="return">Return</h4>
+      <p id="def9">The return statement stops the execution of a function and returns a value from that function.</p>
+    </div>
+
+    <div>
+      <h4 id="cm">Chaining methods</h4>
+      <p id="def10">Chaining Methods, also known as Cascading, refers to repeatedly calling one method after another on an object.</p>
+    </div>
+
+    <div>
+      <h4 id="strings">Strings</h4>
+      <p id="def11">A JavaScript string stores a series of characters like "John Doe".</p>
+    </div>
+
+    <div>
+      <h4 id="booleans">Booleans</h4>
+      <p id="def12">A JavaScript Boolean represents one of two values: true or false.</p>
+    </div>
+
+    <div>
+      <h4 id="undefined">Undefined</h4>
+      <p id="def13">The undefined property indicates that a variable has not been assigned a value.</p>
+    </div>
+
+    <div>
+      <h4 id="nan">NaN</h4>
+      <p id="def14">The NaN property represents "Not-a-Number" value. This property indicates that a value is not a legal number.</p>
+    </div>
+
+    <div>
+      <h4 id="escape">Escape</h4>
+      <p id="def15">JavaScript strings are used for storing and manipulating text.</p>
+    </div>
+
+    <div>
+      <h4 id="alert">Alert</h4>
+      <p id="def16">The alert() method displays an alert box with a specified message and an OK button.</p>
+    </div>
+
+    <div>
+      <h4 id="comments">Comments</h4>
+      <p id="def17">JavaScript comments can be used to explain JavaScript code, and to make it more readable.</p>
+    </div>
+
+    <div>
+      <h4 id="jquery">jQuery</h4>
+      <p id="def18">jQuery is a fast, small, and feature-rich JavaScript library.</p>
+    </div>
+
+    <div>
+      <h4 id="attributes">Attributes</h4>
+      <p id="def19">The attributes property returns a collection of the specified node's attributes, as a NamedNodeMap object.</p>
+    </div>
 
   </body>
 </html>
